@@ -52,10 +52,10 @@ module WWW
 
         if body && response
           html_body = body.length > 0 ? body : '<html></html>'
-          if WWW::Mechanize.html_parser == Nokogiri::HTML
-            @parser = Mechanize.html_parser.parse(html_body, nil, @encoding)
+          if mech.html_parser == Nokogiri::HTML
+            @parser = mech.html_parser.parse(html_body, nil, @encoding)
           else
-            @parser = Mechanize.html_parser.parse(html_body)
+            @parser = mech.html_parser.parse(html_body)
           end
         end
 
